--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            <h1>Test commit to master</h1>
+            <h1>Commit from feature branch</h1>
             @RenderBody()
         </main>
     </div>
