--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
     <div class="container">
         <main role="main" class="pb-3">
             <h1>Commit from feature branch</h1>
+            <h1>Another from feature branch</h1>
             @RenderBody()
         </main>
     </div>
