Create conflict from conflict branch

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-            <h1>Commit from feature branch</h1>
+            <h1>Commit from feature branch -- Conflict</h1>
             <h1>Another from feature branch</h1>
             @RenderBody()
         </main>
