--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
         <main role="main" class="pb-3">
             <h1>Commit from feature branch</h1>
             <h1>Another from feature branch</h1>
+            <h1>HAAIR</h1>
             @RenderBody()
         </main>
     </div>
