--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
             <h1>Commit from feature branch</h1>
             <h1>Another from feature branch</h1>
             <h1>HAAIR</h1>
+            <h1>conflic haair</h1>
             @RenderBody()
         </main>
     </div>
