--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
             <h1>Another from feature branch</h1>
             <h1>HAAIR</h1>
             <h1>conflic byte</h1>
-            <h1>conflic haair</h1>
+            <h1>conflic from byte</h1>
             @RenderBody()
         </main>
     </div>
